# usb_serial_firmware_for_prunt_board_3

firmware/: platformio.ini
firmware/include/: hardware.h  uart.h
firmware/lib/qsb/: qsb_device.h  qsb_serial_no.c
firmware/src/: common.cpp  main.cpp  uart.cpp  usb_cdc.cpp  usb_conf.cpp  usb_serial.cpp
support/: genericSTM32F070F6.json
usb-serial-rs/: Cargo.toml
usb-serial-rs/.cargo/: config.toml
usb-serial-rs/src/: main.rs
