[package]
name = "usb-serial-rs"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-executor = { version = "*", features = ["defmt", "arch-cortex-m", "executor-thread", "nightly"] }
embassy-time = { version = "*", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "*", features = ["defmt", "rp2040"] }
defmt = "*"
defmt-rtt = "*"
panic-probe = "*"
log = "*"
cortex-m = {version = "*", features = ["critical-section-single-core"]}
cortex-m-rt = "*"

[profile.release]
debug = 2
